# documentdb

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  MAINTAINERS.md  Makefile  Makefile.cflags  NOTICE  README.md  documentdb_errors.csv  error_mappings.csv  index.html  rust-toolchain.toml  search.html  syncpoint_oss.txt
pg_documentdb_gw/: .gitignore  Cargo.toml  SetupConfiguration.json
pg_documentdb_gw/documentdb_macros/src/: lib.rs
pg_documentdb_gw/include/: gateway_errors.txt
pg_documentdb_gw/src/: auth.rs  bson.rs  error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
pg_documentdb_gw/src/configuration/: certs.rs  dynamic.rs  mod.rs  pg_configuration.rs  setup.rs  version.rs
pg_documentdb_gw/src/context/: connection.rs  connection_context.rs  cursor.rs  mod.rs  request_context.rs  service.rs  service_context.rs  transaction.rs
pg_documentdb_gw/src/explain/: mod.rs  model.rs  query_diagnostics.rs
pg_documentdb_gw/src/postgres/: client.rs  connection.rs  data_client.rs  document.rs  documentdb_data_client.rs  mod.rs  query_catalog.rs  transaction.rs
pg_documentdb_gw/src/processor/: constant.rs  cursor.rs  data_description.rs  data_management.rs  delete.rs  indexing.rs  ismaster.rs  mod.rs  process.rs  session.rs  transaction.rs  users.rs
pg_documentdb_gw/src/protocol/: header.rs  message.rs  mod.rs  opcode.rs  reader.rs  util.rs
pg_documentdb_gw/src/requests/: compute_request_tracker.rs  mod.rs  read_concern.rs  read_preference.rs  (+1 more)
pg_documentdb_gw/tests/: cursor_tests.rs  index_tests.rs  text_search_tests.rs
(+735 files in other folders)
