[package]
name = "documentdb_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
bson = "2.7.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.9"
bitflags = "1.1.0"
async-recursion = "1.0.5"
serde_json = { version = "1.0.107", features = ["arbitrary_precision"] }
rand = "0.8.5"
deadpool-postgres = "0.11.0"
regex = "1.10.2"
once_cell = "1.18.0"
hex = "0.4.3"
openssl = "0.10.72"
tokio-openssl = "0.6.4"
either = "1.13.0"
socket2 = "0.5.7"
rcgen = "0.13.1"
ntex = { version = "2.0", features = ["tokio", "openssl"] }
documentdb_macros = { path = "./documentdb_macros" }
num-traits = "0.2"
async-trait = "0.1.88"
dyn-clone = "1.0.19"
whoami = "1.6.0"
arc-swap = "1.7.1"

[dependencies.simple_logger]
version = "4.2.0"
default-features = false
features = ["timestamps"]

[dependencies.log]
version = "0.4.20"
features = ["kv", "release_max_level_info"]

[dependencies.tokio-postgres]
version = "0.7.10"
features = ["with-serde_json-1", "array-impls"]

[dependencies.serde]
version = "1.0.125"
features = ["derive", "rc"]

[dependencies.uuid]
version = "1.12.1"
features = ["v4",]

[dev-dependencies]
mongodb = "3.2.0"
reqwest = "0.12.4"

[profile.release-with-symbols]
inherits = "release"
lto = true
strip = false
debug = true
